tests/integration/text_document/snapshots/integration__text_document__completion__acronym_ref_empty.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 90
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\newacronym[longplural={Frames per Second}]{fpsLabel}{FPS}{Frame per Second}\n%SRC \\acrshort{}\n%CUR           ^\"#)?"
---
[
  {
    "data": "[data]",
    "kind": 1,
    "label": "fpsLabel",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "fpsLabel"
    }
  }
]
