tests/integration/text_document/snapshots/integration__text_document__completion__begin_environment_without_snippet_support.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 188
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\beg\n%CUR     ^\n%1.1  ^^^\"#)?"
---
[
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "begin",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "begin"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "begingroup",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "begingroup"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "AtBeginDocument",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "AtBeginDocument"
    }
  },
  {
    "data": "[data]",
    "detail": "built-in",
    "kind": 1,
    "label": "AtBeginDvi",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "AtBeginDvi"
    }
  },
  {
    "data": "[data]",
    "detail": "⋀, built-in",
    "documentation": "[documentation]",
    "kind": 1,
    "label": "bigwedge",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "bigwedge"
    }
  }
]
