tests/integration/text_document/snapshots/integration__text_document__completion__citation_open_brace.snap
---
source: tests/integration/text_document/completion.rs
assertion_line: 217
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\addbibresource{main.bib}\n%SRC \\cite{\n%CUR       ^\n\n%BIB main.bib\n%SRC @article{foo,}\"#)?"
---
[
  {
    "data": "[data]",
    "filterText": "foo @article foo",
    "kind": 1,
    "label": "foo",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "foo"
    }
  }
]
